--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
     <title>간단한 지도 표시하기</title>
+    <link rel="stylesheet" href="">
     <script
       type="text/javascript"
       src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=fauafuq8dt"
@@ -15,7 +16,6 @@
   </head>
   <body>
     <div id="map" style="width: 100%; height: 400px;"></div>
-
     <script>
       var map = new naver.maps.Map("map", {
         center: new naver.maps.LatLng(37.3595704, 127.105399),
