--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -2,7 +2,9 @@ body{
   width:360px;
   text-align: center;
   height:640px;
+  margin: 0 auto;
 }
+
 #all_list{
   width: 74px;
   height: 20px;
@@ -14,16 +16,15 @@ body{
   line-height: 1.5;
   letter-spacing: normal;
   text-align: left;
+  margin-top:16px;
+  margin-left:19px;
+  margin-bottom:14px;
   color: #343434;
-  position: absolute;
-  top:14px;
-  left:19px;
 }
 .star_score{
   margin-bottom:0px;
 }
 .line1{
-  margin-top:50px;
   margin-bottom:20px;
   width: 359.5px;
   height: 0;
