--- a/views/restaurant/파스타마켓.html
+++ b/views/restaurant/파스타마켓.html
@@ -32,9 +32,28 @@
             font-size : 12px;
         }
 
+        td {
+          padding : 10px;
+          border-bottom: 1px solid #e0e0e0;
+        }
+
+        .tab-menu, .tab-info {
+          width : 100%;
+        }
+
+        #price {
+          width : 30%;
+          text-align: right;
+        }
+
+        #icon {
+          width : 10%;
+          text-align: center;
+        }
+
     </style>
   </head>
-  <body>
+  <body id="btstrp">
 <div class="container-fluid">
     <h2>파스타마켓</h2>
     <p>스파게티, 파스타 전문<p>
@@ -42,11 +61,11 @@
       <li class="nav-item">
         <a
           class="nav-link active"
-          id="home-tab"
+          id="menu-tab"
           data-toggle="tab"
-          href="#home"
+          href="#menu"
           role="tab"
-          aria-controls="home"
+          aria-controls="menu"
           aria-selected="true"
           >메뉴</a
         >
@@ -55,11 +74,11 @@
       <li class="nav-item">
         <a
           class="nav-link"
-          id="profile-tab"
+          id="info-tab"
           data-toggle="tab"
-          href="#profile"
+          href="#info"
           role="tab"
-          aria-controls="profile"
+          aria-controls="info"
           aria-selected="false"
           >정보</a
         >
@@ -67,69 +86,64 @@
       <li class="nav-item">
         <a
           class="nav-link"
-          id="contact-tab"
+          id="location-tab"
           data-toggle="tab"
-          href="#contact"
+          href="#location"
           role="tab"
-          aria-controls="contact"
+          aria-controls="location"
           aria-selected="false"
           >지도</a
         >
       </li>
     </ul>
 
-
-
-    
-
-
     <div class="tab-content" id="myTabContent">
       <div
         class="tab-pane fade show active"
-        id="home"
+        id="menu"
         role="tabpanel"
-        aria-labelledby="home-tab"
+        aria-labelledby="menu-tab"
       >
       <table class="tab-menu">
         <tbody>
             <tr>
                 <td>메뉴1</td>
-                <td>가격</td>
+                <td id="price">18,000원</td>
             </tr>
             <tr>
                 <td>메뉴1</td>
-                <td>가격</td>
+                <td id="price">23,000원</td>
             </tr>
             <tr>
                 <td>메뉴1</td>
-                <td>가격</td>
+                <td id="price">9,000원</td>
             </tr>
         </tbody>
     </table>
       </div>
       <div
         class="tab-pane fade"
-        id="profile"
+        id="info"
         role="tabpanel"
-        aria-labelledby="profile-tab"
+        aria-labelledby="info-tab"
       >
       <table class="tab-info">
         <tbody>
             <tr>
-                <td><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cursor" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <td id="icon"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cursor" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103zM2.25 8.184l3.897 1.67a.5.5 0 0 1 .262.263l1.67 3.897L12.743 3.52 2.25 8.184z"/>
                   </svg></td>
                 <td>서울 종로구 대학로11길 9-5</td>
             </tr>
             <tr>
-                <td><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <td id="icon"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
                     <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
                   </svg></td>
                 <td>토요일 12:00 - 21:00<br>브레이크타임없음</td>
             </tr>
             <tr>
-                <td><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shop-window" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <td id="icon"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shop-window" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M3.12 1.175A.5.5 0 0 1 3.5 1h9a.5.5 0 0 1 .38.175l2.759 3.219A1.5 1.5 0 0 1 16 5.37v.13h-1v-.13a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.13H0v-.13a1.5 1.5 0 0 1 .361-.976l2.76-3.22z"/>
                     <path d="M2.375 6.875c.76 0 1.375-.616 1.375-1.375h1a1.375 1.375 0 0 0 2.75 0h1a1.375 1.375 0 0 0 2.75 0h1a1.375 1.375 0 1 0 2.75 0h1a2.375 2.375 0 0 1-4.25 1.458 2.371 2.371 0 0 1-1.875.917A2.37 2.37 0 0 1 8 6.958a2.37 2.37 0 0 1-1.875.917 2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.5h1c0 .76.616 1.375 1.375 1.375z"/>
                     <path d="M4.75 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM2 8.854V15h12V8.854a3.354 3.354 0 0 0 1-.27V15h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V8.583c.311.14.647.232 1 .271zm0-1.008V7H1v.437c.291.207.632.35 1 .409zm13-.409c-.291.207-.632.35-1 .409V7h1v.437z"/>
@@ -142,9 +156,9 @@
       </div>
       <div
         class="tab-pane fade"
-        id="contact"
+        id="location"
         role="tabpanel"
-        aria-labelledby="contact-tab"
+        aria-labelledby="location-tab"
       >
         <div id="map" style="width: 100%; height: 400px;"></div>
       </div>
