--- a/views/restaurant/정돈.html
+++ b/views/restaurant/정돈.html
@@ -17,6 +17,28 @@
       crossorigin="anonymous"
     />
     <style>
+       img{
+            width: 100%;
+            height: 250px;
+        }
+
+        #ArrowLeft{
+        height: 50px;
+        }
+        
+        .class{
+            font-size: small;
+            text-align: center;
+        }
+        h2{
+            font-weight: bold;
+            font-size: x-large;
+            margin-top: 15px;
+        }
+        #detail{
+            font-size: small;
+        }
+        
         h2 {
             font-size : 25px;
             text-align: center;
@@ -53,7 +75,12 @@
 
     </style>
   </head>
-  <body id="btstrp">
+  <body>
+    <div id="ArrowLeft"><svg width="25px" height="25px" viewBox="0 0 16 8" class="bi bi-arrow-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M5.854 4.646a.5.5 0 0 1 0 .708L3.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0z"/>
+        <path fill-rule="evenodd" d="M2.5 8a.5.5 0 0 1 .5-.5h10.5a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg></div>
+    <img id="JD" src='/public/image/JD.jpg'/>
 <div class="container-fluid">
     <h2>정돈</h2>
     <p> ~~~ 전문<p>
