--- a/views/restaurant/template.html
+++ b/views/restaurant/template.html
@@ -83,10 +83,11 @@
       </div>
     </div>
 
-    <script>
+    <!--정돈 주소
+      <script>
       var map = new naver.maps.Map("map", {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
-        zoom: 15,
+        center: new naver.maps.LatLng(37.581803,127.0011239),
+        zoom: 16,
       });
 
       var marker = new naver.maps.Marker({
@@ -94,6 +95,39 @@
         map: map,
       });
     </script>
+    -->
+    <!-- 바오밥 
+    <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.582445,126.9996615),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    주소-->
+
+    <!-- 메밀향 그집
+    <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5823388,127.0006551),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+    <!--청춘 직화
+      
+
+    -->
     <!--부트스트랩 JS-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
