--- a/views/rslist_june.html
+++ b/views/rslist_june.html
@@ -11,7 +11,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../public/css/style2.css">
+    <link rel="stylesheet" href="../public/css/style_june.css">
   </head>
   <body>
     <!--부트스트랩 JS-->
