밥집 뒷부분

--- a/views/restaurant/파스타마켓.html
+++ b/views/restaurant/파스타마켓.html
@@ -78,7 +78,7 @@
       <path fill-rule="evenodd" d="M5.854 4.646a.5.5 0 0 1 0 .708L3.207 8l2.647 2.646a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 0 1 .708 0z"/>
       <path fill-rule="evenodd" d="M2.5 8a.5.5 0 0 1 .5-.5h10.5a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
     </svg></div>
-    <img id="JD" src='/public/image/JD.jpg'/>
+    <img id="파스타마켓" src='/public/image/밥집/파스타마켓.jpeg'/>
 <div class="container-fluid">
     <h2>파스타마켓</h2>
     <p>스파게티, 파스타 전문<p>
@@ -132,17 +132,14 @@
       <table class="tab-menu">
         <tbody>
             <tr>
-                <td>메뉴1</td>
+                <td>스파이시로제</td>
                 <td id="price">18,000원</td>
             </tr>
             <tr>
-                <td>메뉴1</td>
+                <td>문어 스테이크 리조또</td>
                 <td id="price">23,000원</td>
             </tr>
-            <tr>
-                <td>메뉴1</td>
-                <td id="price">9,000원</td>
-            </tr>
+ 
         </tbody>
     </table>
       </div>
@@ -174,7 +171,7 @@
                     <path d="M4.75 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM2 8.854V15h12V8.854a3.354 3.354 0 0 0 1-.27V15h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V8.583c.311.14.647.232 1 .271zm0-1.008V7H1v.437c.291.207.632.35 1 .409zm13-.409c-.291.207-.632.35-1 .409V7h1v.437z"/>
                     <path d="M4 13V9H3v4a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V9h-1v4H4z"/>
                   </svg></td>
-                <td>페이지</td>
+                <td>-</td>
             </tr>
         </tbody>
     </table>
