--- a/views/restaurant/정돈.html
+++ b/views/restaurant/정돈.html
@@ -81,7 +81,7 @@
     <img id="JD" src='/public/image/JD.jpg'/>
 <div class="container-fluid">
     <h2>정돈</h2>
-    <p> ~~~ 전문<p>
+    <p>수요미식회에서 추천한 대학로 돈까스맛집<p>
     <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
       <li class="nav-item">
         <a
@@ -132,16 +132,12 @@
       <table class="tab-menu">
         <tbody>
             <tr>
-                <td>메뉴1</td>
+                <td>등심돈카츠(220g)</td>
+                <td id="price">13,000원</td>
+            </tr>
+            <tr>
+                <td>등심+안심돈카츠</td>
                 <td id="price">18,000원</td>
-            </tr>
-            <tr>
-                <td>메뉴1</td>
-                <td id="price">23,000원</td>
-            </tr>
-            <tr>
-                <td>메뉴1</td>
-                <td id="price">9,000원</td>
             </tr>
         </tbody>
     </table>
@@ -158,14 +154,15 @@
                 <td id="icon"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cursor" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103zM2.25 8.184l3.897 1.67a.5.5 0 0 1 .262.263l1.67 3.897L12.743 3.52 2.25 8.184z"/>
                   </svg></td>
-                <td>서울 종로구 ~~~</td>
+                <td>서울 종로구 대학로9길 12</td>
             </tr>
             <tr>
                 <td id="icon"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
                     <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
                   </svg></td>
-                <td>영업시간 ~~~ </td>
+                <td>매일 11:30 - 15:00 라스트오더 14시<br>
+                  매일 17:00 - 21:00 라스트오더 21시</td>
             </tr>
             <tr>
                 <td id="icon"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shop-window" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
@@ -174,7 +171,7 @@
                     <path d="M4.75 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM2 8.854V15h12V8.854a3.354 3.354 0 0 0 1-.27V15h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V8.583c.311.14.647.232 1 .271zm0-1.008V7H1v.437c.291.207.632.35 1 .409zm13-.409c-.291.207-.632.35-1 .409V7h1v.437z"/>
                     <path d="M4 13V9H3v4a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V9h-1v4H4z"/>
                   </svg></td>
-                <td>웹페이지 주소</td>
+                <td>https://store.naver.com/restaurants/detail?id=37126807</td>
             </tr>
         </tbody>
     </table>
