--- a/views/rslist_june.html
+++ b/views/rslist_june.html
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/바오밥.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="../public/img/밥집/바오밥.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">바오밥</h5></a>
               <div class="star_score">
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="col">
-            <a href="##"><img src="../public/img/밥집/깔리.jpg" class="card-img-top" alt="..."></a>
+            <a href="##"><img src="../public/img/밥집/깔리.jpeg" class="card-img-top" alt="..."></a>
             <div class="card-body">
               <a href="##"><h5 class="card-title">깔리</h5></a>
               <div class="star_score">
