--- a/views/restaurant/template.html
+++ b/views/restaurant/template.html
@@ -79,27 +79,14 @@
         role="tabpanel"
         aria-labelledby="contact-tab"
       >
-        <div id="map" style="width: 100%; height: 400px;"></div>
+        <div id="map" style="width: 360px; height: 640px;"></div>
       </div>
     </div>
 
-    <!--정돈 주소
-      <script>
-      var map = new naver.maps.Map("map", {
-        center: new naver.maps.LatLng(37.581803,127.0011239),
-        zoom: 16,
-      });
-
-      var marker = new naver.maps.Marker({
-        position: map.center,
-        map: map,
-      });
-    </script>
-    -->
     <!-- 바오밥 
     <script>
       var map = new naver.maps.Map("map", {
-        center: new naver.maps.LatLng(37.582445,126.9996615),
+        center: new naver.maps.LatLng(37.5824454,126.9996727),
         zoom: 16,
       });
 
@@ -113,7 +100,7 @@
     <!-- 메밀향 그집
     <script>
       var map = new naver.maps.Map("map", {
-        center: new naver.maps.LatLng(37.5823388,127.0006551),
+        center: new naver.maps.LatLng(37.5823339,127.0006541),
         zoom: 16,
       });
 
@@ -125,8 +112,205 @@
     -->
 
     <!--청춘 직화
-      
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5887233,126.9950599),
+        zoom: 16,
+      });
 
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+
+    -->
+
+    <!--깔리
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5823339,127.0006541),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+    <!--부부식당
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.580245,127.0042969),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+     <!--버거파크
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5823339,127.0006541),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+     <!--명륜건강원
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5823339,127.0006541),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+    <!--산쪼메
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5866865,126.9963898),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+
+    <!--소친친
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5826114,126.9997615),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+      <!--쪼리닭
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5823689,127.0008243),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+     <!--파스타마켓
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5820784,127.0012435),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+     <!--혜화칼국수
+      <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5865604,127.0015069),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+    <!--호호식당
+    <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5818874,127.000066),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    -->
+
+
+    <!--깔리
+    <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5824807,126.9992782),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    
+    -->
+
+    <!--명륜건강원
+    <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5855641,127.0001619),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    
+    -->
+
+    <!-- 버거파크
+    <script>
+      var map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5821746,127.0013823),
+        zoom: 16,
+      });
+
+      var marker = new naver.maps.Marker({
+        position: map.center,
+        map: map,
+      });
+    </script>
+    
     -->
     <!--부트스트랩 JS-->
     <script
