--- a/views/restaurant/정돈.html
+++ b/views/restaurant/정돈.html
@@ -74,6 +74,20 @@
           text-align: center;
         }
 
+        @media screen and (max-width:360px) {
+            #map {
+                width: 360%; 
+                height: 400px;
+            }
+            
+        }
+        @media screen and (min-width:361px) {
+            #map {
+                width: 100%; 
+                height: 400px;
+            }
+            
+        }
     </style>
   </head>
   <body>
@@ -194,8 +208,8 @@
 </div>
     <script>
     var map = new naver.maps.Map("map", {
-      center: new naver.maps.LatLng(37.581803,127.0011239),
-      zoom: 16,
+      center: new naver.maps.LatLng(37.5818019, 127.0011237),
+      zoom: 17,
     });
 
     var marker = new naver.maps.Marker({
