--- a/views/restaurant/깔리.html
+++ b/views/restaurant/깔리.html
@@ -73,6 +73,19 @@
           text-align: center;
         }
 
+        #call{
+          background-color: #4b92d9;
+          color : white;
+          border: transparent;
+          width: 190px;
+          height: 45px;
+          border-radius: 4px;
+          margin-top: 10px;
+          margin-bottom: 15px;
+          position : absolute;
+          left:0; right:0; margin-left:auto; margin-right:auto;
+        }
+
     </style>
   </head>
   <body>
@@ -238,5 +251,7 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+
+    <input type="button" id="call" value="바로 예약하기" onclick="location.href='tel:010-1234-5678'">
   </body>
 </html>
