--- a/views/restaurant/부부식당.html
+++ b/views/restaurant/부부식당.html
@@ -70,6 +70,18 @@
         #detail{
             font-size: small;
         }
+        #call{
+          background-color: #4b92d9;
+          color : white;
+          border: transparent;
+          width: 190px;
+          height: 45px;
+          border-radius: 4px;
+          margin-top: 10px;
+          margin-bottom: 15px;
+          position : absolute;
+          left:0; right:0; margin-left:auto; margin-right:auto;
+        }
 
     </style>
   </head>
@@ -212,5 +224,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <input type="button" id="call" value="바로 예약하기" onclick="location.href='tel:010-1234-5678'">
   </body>
 </html>
