--- a/views/restaurant/정돈.html
+++ b/views/restaurant/정돈.html
@@ -73,7 +73,10 @@
           width : 10%;
           text-align: center;
         }
-
+        #map{
+          width: 100%;
+          height: 400px;
+        }
         @media screen and (max-width:360px) {
             #map {
                 width: 360%; 
@@ -81,13 +84,7 @@
             }
             
         }
-        @media screen and (min-width:361px) {
-            #map {
-                width: 100%; 
-                height: 400px;
-            }
-            
-        }
+     
     </style>
   </head>
   <body>
@@ -202,7 +199,7 @@
         role="tabpanel"
         aria-labelledby="location-tab"
       >
-        <div id="map" style="width: 100%; height: 400px;"></div>
+        <div id="map"></div>
       </div>
     </div>
 </div>
