--- a/views/index.html
+++ b/views/index.html
@@ -7,25 +7,73 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
-    <title>간단한 지도 표시하기</title>
+    <title>main page</title>
     <link rel="stylesheet" href="">
-    <script
-      type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=fauafuq8dt"
-    ></script>
+     <!--부트스트랩 CSS-->
+     <link
+     rel="stylesheet"
+     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+     crossorigin="anonymous"
+   />
+   <style>
+     .bgbox {
+       background-color : #5cb85c86;
+       position : absolute;
+       top : 37%;
+       left : 10%;
+       height : 63%;
+       width : 90%;
+       z-index: -1;
+      }
+     
+     .ttl_main {
+      text-align: center;
+      padding-top : 40%;
+      padding-bottom: 20%;;
+     }
+
+     .ttl_main p {
+       font-size: 20px;
+       color : #5cb85c;
+       margin-bottom: auto;
+     }
+
+
+     .h1wrapper h1{
+       display: inline-block;
+       font-size: 35px;
+     }
+
+     #h1_01{
+       color:#4b92d9;
+     }
+
+     .btn_idx {
+       background-color: rgba(75, 146, 217, 0.85);
+       border : none;
+       padding : 4%;
+       width : 65%;
+       margin : 0 17.5%;
+       color : white;
+      border-radius: 5px;
+     }
+   </style>
   </head>
   <body>
-    <div id="map" style="width: 100%; height: 400px;"></div>
-    <script>
-      var map = new naver.maps.Map("map", {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
-        zoom: 15,
-      });
-
-      var marker = new naver.maps.Marker({
-        position: map.center,
-        map: map,
-      });
-    </script>
+    <div class="container-fluid">
+      <div class = ttl_main>
+        <p>밥약, 뒤풀이 장소 찾기 어려울 땐</p>
+        <div class = "h1wrapper"><h1 id="h1_01">혜화로드</h1><h1 id="h1_02">로 쉽게!</h1></div>
+      </div>
+      <div class = btns_main>
+        <a href="#"><button type="button" class="btn_idx">밥약 장소 찾기</button></a>
+        <p></p>
+        <a href="#"><button type="button" class="btn_idx">뒤풀이 장소 찾기</button></a>
+        <p></p>
+        <a href="#"><button type="button" class="btn_idx">랜덤 추천 받기</button></a>
+      </div>
+      <div class="bgbox"></div>
+  </div> <!--container-fluid-->
   </body>
 </html>
