--- a/views/rand_test.html
+++ b/views/rand_test.html
@@ -20,17 +20,16 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <script src="../public/js/rs_random.js"></script>
+    <script src="../public/js/rand_test_js.js"></script>
 
-    <link rel='stylesheet' href="../public/css/style_test.css">
+    <link rel='stylesheet' href="../public/css/rand_test_css.css">
 
 </head>
 <body>
 
 
-    <img id="bobimg" src="../public/img/밥집/깔리.jpeg">
-    <h2 id="bobname">깔리</h2>
-    <button onclick="toggleImg()">random</button>
+   
+    <button onclick="toggleImg(0,12)">random</button>
 
     <h2 id="num">num</h2>
     
