--- a/views/restaurant/산쪼메.html
+++ b/views/restaurant/산쪼메.html
@@ -197,17 +197,16 @@
       </div>
     </div>
 </div>
-    <script>
-      var map = new naver.maps.Map("map", {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
-        zoom: 15,
-      });
-
-      var marker = new naver.maps.Marker({
-        position: map.center,
-        map: map,
-      });
-    </script>
+<script>
+  var map = new naver.maps.Map("map", {
+    center: new naver.maps.LatLng(37.5866865,126.9963898),
+    zoom: 16,
+  });
+  var marker = new naver.maps.Marker({
+    position: map.center,
+    map: map,
+  });
+</script>
     <!--부트스트랩 JS-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
