--- a/views/restaurant/바오밥.html
+++ b/views/restaurant/바오밥.html
@@ -211,17 +211,16 @@
       </div>
     </div>
 </div>
-    <script>
-    var map = new naver.maps.Map("map", {
-      center: new naver.maps.LatLng(37.581803,127.0011239),
-      zoom: 16,
-    });
-
-    var marker = new naver.maps.Marker({
-      position: map.center,
-      map: map,
-    });
-  </script>
+<script>
+  var map = new naver.maps.Map("map", {
+    center: new naver.maps.LatLng(37.5824454,126.9996727),
+    zoom: 16,
+  });
+  var marker = new naver.maps.Marker({
+    position: map.center,
+    map: map,
+  });
+</script>
     <!--부트스트랩 JS-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
