--- a/views/restaurant/정돈.html
+++ b/views/restaurant/정돈.html
@@ -198,17 +198,17 @@
       </div>
     </div>
 </div>
-    <script>
-      var map = new naver.maps.Map("map", {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
-        zoom: 15,
-      });
+<script>
+  var map = new naver.maps.Map("map", {
+    center: new naver.maps.LatLng(37.5818019, 127.0011237),
+    zoom: 17,
+  });
 
-      var marker = new naver.maps.Marker({
-        position: map.center,
-        map: map,
-      });
-    </script>
+  var marker = new naver.maps.Marker({
+    position: map.center,
+    map: map,
+  });
+</script>
     <!--부트스트랩 JS-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
