--- a/views/res-random.html
+++ b/views/res-random.html
@@ -11,7 +11,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"/>
-    <script src="../public/js/rand_test_js.js"></script>
+    <script src="../public/js/res-random.js"></script>
     <link rel="stylesheet" href="../public/css/res-random.css"/>
   </head>
 
@@ -62,7 +62,7 @@
             정돈 대학로 본점
           </p>
           <p class="rating">
-            <span
+            <span 
               ><svg
                 width="12px"
                 height="12px"
@@ -74,7 +74,7 @@
                 <path
                   d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"
                 /></svg></span
-            >4.49
+            ><span id="star">4.49</span>
           </p>
           <a id="phone" class="reserve-link" href="tel:010-3939-8423"
             ><span
