--- a/views/restaurant/부부식당.html
+++ b/views/restaurant/부부식당.html
@@ -132,14 +132,38 @@
       <table class="tab-menu">
         <tbody>
             <tr>
-                <td>숯불닭다리살구이</td>
+                <td>숯불 닭다리살 구이</td>
                 <td id="price">11,800원</td>
             </tr>
             <tr>
                 <td>오징어 궁중떡볶이</td>
                 <td id="price">13,800원</td>
             </tr>
-        </tbody>
+            <tr>
+              <td>통새우 토마토 커리</td>
+              <td id="price">9,800원</td>
+            </tr>
+            <tr>
+             <td>목살구이와 고르곤크림</td>
+              <td id="price">12,800원</td>
+            </tr>
+            <tr>
+              <td>구운가지와 크림미트소스</td>
+              <td id="price">14,800원</td>
+            </tr>
+            <tr>
+              <td>마스카포네 연어스테이크</td>
+              <td id="price">16,800원</td>
+            </tr>
+            <tr>
+             <td>카프레제 샐러드</td>
+              <td id="price">13,800원</td>
+            </tr>
+            <tr>
+              <td>해산물생토마토파스타</td>
+              <td id="price">14,800원</td>
+            </tr>
+          </tbody>
     </table>
       </div>
       <div
