--- a/views/restaurant/산쪼메 대학로점.html
+++ b/views/restaurant/산쪼메 대학로점.html
@@ -80,7 +80,7 @@
     </svg></div>
     <img id="산쪼메" src='/public/img/밥집/산쪼메.jpg'/>
 <div class="container-fluid">
-    <h2>산쪼메 성균관대점</h2>
+    <h2>산쪼메 대학로점</h2>
     <p>일본식 라멘 전문점<p>
     <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
       <li class="nav-item">
@@ -132,12 +132,28 @@
       <table class="tab-menu">
         <tbody>
             <tr>
-                <td>라멘류</td>
+                <td>돈코츠라멘</td>
                 <td id="price">7,000원</td>
+              </tr>
+            <tr>
+              <td>산쪼메라멘</td>
+              <td id="price">8,000원</td>
             </tr>
             <tr>
-                <td>덮밥류</td>
-                <td id="price">7,000원</td>
+              <td>시오버터라멘</td>
+              <td id="price">7,000원</td>
+           </tr>
+           <tr>
+              <td>쇼유라멘</td>
+              <td id="price">7,000원</td>
+            </tr>
+            <tr>
+              <td>규동</td>
+              <td id="price">8,000원</td>
+            </tr>
+            <tr>
+              <td>매운부타동</td>
+              <td id="price">7,000원</td>
             </tr>
         </tbody>
     </table>
