--- a/views/restaurant/소친친.html
+++ b/views/restaurant/소친친.html
@@ -133,16 +133,32 @@
         <tbody>
             <tr>
                 <td>갈비차오판</td>
-                <td id="price">9,000원</td>
+                <td id="price">9,800원</td>
             </tr>
+            <tr>
+              <td>특제차오판</td>
+              <td id="price">13,000원</td>
+          </tr>
             <tr>
                 <td>딴딴미엔</td>
-                <td id="price">12,000원</td>
+                <td id="price">12,500원</td>
             </tr>
             <tr>
-                <td>산서초 꿔바로우(소)</td>
-                <td id="price">14,000원</td>
+                <td>산서초 꿔바로우(소/대)</td>
+                <td id="price">15,000원 / 20,000원</td>
             </tr>
+            <tr>
+              <td>칠리새우(소/대)</td>
+              <td id="price">20,000원 / 25,000원</td>
+          </tr>
+          <tr>
+            <td>깐풍기(소/대)</td>
+            <td id="price">15,000원 / 20,000원</td>
+         </tr>
+          <tr>
+            <td>마라롱샤</td>
+            <td id="price">30,000원</td>
+          </tr>
         </tbody>
     </table>
       </div>
