--- a/views/restaurant/정돈.html
+++ b/views/restaurant/정돈.html
@@ -132,12 +132,28 @@
       <table class="tab-menu">
         <tbody>
             <tr>
-                <td>등심돈카츠(220g)</td>
+                <td>등심 돈가스(220g)</td>
                 <td id="price">13,000원</td>
             </tr>
             <tr>
-                <td>등심+안심돈카츠</td>
+                <td>안심 돈가스(220g)</td>
+                <td id="price">14,000원</td>
+            </tr>
+            <tr>
+                <td>등심+안심 돈카츠(등심 110g / 안심 150g)</td>
                 <td id="price">18,000원</td>
+            </tr>
+            <tr>
+              <td>새우+등심 돈가스 (2p + 220g)</td>
+              <td id="price">21,000원</td>
+            </tr>
+            <tr>
+              <td>새우+안심 돈가스 (2p + 220g)</td>
+              <td id="price">22,000원</td>
+            </tr>
+            <tr>
+              <td>등심 돈가스 카레 (120g)</td>
+              <td id="price">13,000원</td>
             </tr>
         </tbody>
     </table>
