--- a/views/restaurant/쪼리닭.html
+++ b/views/restaurant/쪼리닭.html
@@ -132,16 +132,24 @@
       <table class="tab-menu">
         <tbody>
             <tr>
-                <td>쪼리닭(보통/매운)</td>
-                <td id="price">22,000원</td>
+                <td>쪼리닭 1인분(보통)</td>
+                <td id="price">11,000원</td>
             </tr>
             <tr>
-                <td>곱닭이</td>
-                <td id="price">24,000원</td>
+              <td>쪼리닭 1인분(매운)</td>
+              <td id="price">12,000원</td>
+          </tr>
+            <tr>
+                <td>매운갈비 낙지찜(중, 400g)</td>
+                <td id="price">28,000원</td>
             </tr>
             <tr>
-                <td>국물쪼리닭</td>
-                <td id="price">22,000원</td>
+              <td>매운갈비 낙지찜(대, 600g)</td>
+              <td id="price">38,000원</td>
+            </tr>
+            <tr>
+                <td>국물쪼리닭 1인분</td>
+                <td id="price">11,000원</td>
             </tr>
         </tbody>
     </table>
