--- a/views/restaurant/파스타마켓.html
+++ b/views/restaurant/파스타마켓.html
@@ -139,6 +139,18 @@
                 <td>문어 스테이크 리조또</td>
                 <td id="price">23,000원</td>
             </tr>
+            <tr>
+              <td>리코타 클라시카</td>
+              <td id="price">15,000원</td>
+           </tr>
+           <tr>
+            <td>조개조개그리고새우 1.5인분</td>
+            <td id="price">18,000원</td>
+          </tr>
+          <tr>
+            <td>치즈치즈그리고치즈피자 </td>
+            <td id="price">12,000원</td>
+         </tr>
  
         </tbody>
     </table>
@@ -162,7 +174,7 @@
                     <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
                     <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
                   </svg></td>
-                <td>토요일 12:00 - 21:00<br>브레이크타임없음</td>
+                <td>평일 11:30 - 21:00<br>브레이크타임 15:00 - 17:00<br>토요일 12:00 - 21:00<br>브레이크타임없음</td>
             </tr>
             <tr>
                 <td id="icon"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shop-window" fill="#5cb85c" xmlns="http://www.w3.org/2000/svg">
@@ -171,7 +183,7 @@
                     <path d="M4.75 5.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm3.75 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM2 8.854V15h12V8.854a3.354 3.354 0 0 0 1-.27V15h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V8.583c.311.14.647.232 1 .271zm0-1.008V7H1v.437c.291.207.632.35 1 .409zm13-.409c-.291.207-.632.35-1 .409V7h1v.437z"/>
                     <path d="M4 13V9H3v4a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V9h-1v4H4z"/>
                   </svg></td>
-                <td>-</td>
+                <td>https://www.instagram.com/iljungkitchen/</td>
             </tr>
         </tbody>
     </table>
