--- a/views/restaurant/혜화칼국수.html
+++ b/views/restaurant/혜화칼국수.html
@@ -143,6 +143,18 @@
                 <td>생선튀김(소)</td>
                 <td id="price">16,000원</td>
             </tr>
+            <tr>
+              <td>문어(소)</td>
+              <td id="price">16,000원</td>
+            </tr>
+            <tr>
+              <td>바싹불고기(소)</td>
+              <td id="price">16,000원</td>
+            </tr>
+            <tr>
+              <td>수육(소)</td>
+              <td id="price">16,000원</td>
+            </tr>
         </tbody>
     </table>
       </div>
