--- a/views/restaurant/호호식당.html
+++ b/views/restaurant/호호식당.html
@@ -143,6 +143,22 @@
                 <td>돈카츠정식</td>
                 <td id="price">13,000원</td>
             </tr>
+            <tr>
+              <td>사케동</td>
+              <td id="price">13,000원</td>
+            </tr>
+            <tr>
+              <td>가츠나베정식</td>
+              <td id="price">14,000원</td>
+            </tr>
+            <tr>
+              <td>돈테키정식</td>
+              <td id="price">15,000원</td>
+            </tr>
+            <tr>
+              <td>명란파스타</td>
+              <td id="price">13,000원</td>
+            </tr>
         </tbody>
     </table>
       </div>
