--- a/public/css/res-random.css
+++ b/public/css/res-random.css
@@ -4,11 +4,17 @@ html {
 body {
   height: 100%;
 }
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .top {
   align-items: center;
   border-bottom: #dddddd 0.5px solid;
   display: flex;
   height: 50px;
+  width: 360px;
 }
 .top svg {
   margin-left: 16px;
@@ -20,7 +26,7 @@ body {
   text-shadow: 3px 7px 5px rgba(0, 0, 0, 0.16);
 }
 .main-nav {
-  padding: 29px 0;
+  padding: 29px 0 36px;
   display: flex;
   justify-content: center;
 }
@@ -117,10 +123,15 @@ body {
   font-size: 17px;
   font-weight: 300;
 }
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .bottom-nav {
   position: fixed;
   bottom: 0;
-  width: 100%;
+  width: 360px;
   display: flex;
   justify-content: space-around;
   align-items: center;
