--- a/views/res-random.html
+++ b/views/res-random.html
@@ -125,7 +125,7 @@
       </button>
     </section>
 
-    <section>
+    <section class="footer">
       <div class="bottom-nav">
         <div class="home-nav">
           <svg
